--- a/ASPMVCmarket/Views/Car/CarIndex.cshtml
+++ b/ASPMVCmarket/Views/Car/CarIndex.cshtml
@@ -6,11 +6,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Car Index View</h2>
+<h2>Cars</h2>
 <table class="table table-striped table-hover table-bordered">
     <thead class="thead-dark">
         <tr>
-            CARS:
+            <th>cars:</th>
         </tr>
     </thead>
     
@@ -18,7 +18,8 @@
         @foreach (var car in Model)
         {
             <tr>
-                @car.Name
+                <td>@car.Id</td>
+                <td>@car.Name</td>
             </tr>
         }
     </tbody>
