--- a/ASPMVCmarket/Views/Customer/CustomerIndex.cshtml
+++ b/ASPMVCmarket/Views/Customer/CustomerIndex.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<ASPMVCmarket.Models.Customer>
+
 @*
 +    Note: I've set the model for this view to IEnumerable<Customer>.
 +    This is a simple interface implemented by the list class. Since
@@ -8,7 +9,8 @@
 +    iterate over the list. If in the future, we replace the List with a
 +    different data structure, as long as it is enumerable, our view code
 +    will remain unchanged.
-+*@
+*@
+
 @{
     ViewBag.Title = "Customers";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -22,17 +24,18 @@
 else
 {
     <table class="table table-bordered table-hover">
-        <thread>
+        <thead class="thead-light">
             <tr>
-                <th>Customer</th>
+                <th>Customers:</th>
             </tr>
-        </thread>
+        </thead>
         
         <tbody>
         @foreach (var customer in Model)
         {
             <tr>
-                @Html.ActionLink(customer.Name, "Details", "Customers", new {id = customer.Id}, null)
+                <td>@customer.Id</td>
+                <td>@Html.ActionLink(customer.Name, "CustomerDetails", "Customer", new {id = customer.Id}, null)</td>
             </tr>
         }
         </tbody>
