--- a/ASPMVCmarket/Views/Shared/_NavBar.cshtml
+++ b/ASPMVCmarket/Views/Shared/_NavBar.cshtml
@@ -1,36 +1,33 @@
 ﻿<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
+
+
         <div class="navbar-brand">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
+
             </button>
             @Html.ActionLink("TESLA", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
         </div>
 
         <div class="collapse navbar-collapse" id="navbarColor01">
+
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link" href="@Url.Action("CarIndex", "Car")">cars</a>
                 </li>
+
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="@Url.Action("CustomerIndex", "Customer")">customers</a>
                 </li>
             </ul>
 
-
-            <form class="form-inline my-2 my-lg-0">
+            <form class="form-inline my-2 my-lg-0 navbar-text">
                 @Html.Partial("_LoginPartial")
             </form>
         </div>
+
     </div>
 </nav>
+
 <hr>
