Added: -CarDetails view -Migrations
Changed:
-Car model
-Customer model
-IdentityModels (it's database model)
-MembershipType model
-Car controller
-Customer controller

--- a/ASPMVCmarket/Views/Car/CarIndex.cshtml
+++ b/ASPMVCmarket/Views/Car/CarIndex.cshtml
@@ -19,7 +19,7 @@
         {
             <tr>
                 <td>@car.Id</td>
-                <td>@car.Name</td>
+                <td>@Html.ActionLink(car.Name, "CarDetails", "Car", new { id = car.Id }, null)</td>
             </tr>
         }
     </tbody>
