--- a/ASPMVCmarket/Views/Customer/CustomerDetails.cshtml
+++ b/ASPMVCmarket/Views/Customer/CustomerDetails.cshtml
@@ -6,4 +6,7 @@
 }
 
 <h2>@Model.Name</h2>
+<p>Birth time: @Model.BirthTime</p>
+<p>Membership type: @Model.MembershipType.MembershipTypeName</p>
+<p>Newsletter subscription: @Model.IsSubscribedToNewsletter</p>
 
