--- a/ASPMVCmarket/Views/Customer/CustomerIndex.cshtml
+++ b/ASPMVCmarket/Views/Customer/CustomerIndex.cshtml
@@ -26,7 +26,10 @@ else
     <table class="table table-bordered table-hover">
         <thead class="thead-light">
             <tr>
+                <th>ID:</th>
                 <th>Customers:</th>
+                <th>Discount Rate:</th>
+                <th>Memebership Type:</th>
             </tr>
         </thead>
 
@@ -36,6 +39,8 @@ else
                 <tr>
                     <td>@customer.Id</td>
                     <td>@Html.ActionLink(customer.Name, "CustomerDetails", "Customer", new { id = customer.Id }, null)</td>
+                    <td>@customer.MembershipType.DiscountRate%</td>
+                    <td>@customer.MembershipType.MembershipTypeName</td>
                 </tr>
             }
         </tbody>
