--- a/ASPMVCmarket/Views/Customer/CustomerIndex.cshtml
+++ b/ASPMVCmarket/Views/Customer/CustomerIndex.cshtml
@@ -16,7 +16,13 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Customers</h2>
+<h2 class="verticallyCentered">
+    <span>Customers:</span>
+    <input type="button" class="btn btn-primary btn-sm float-right" value="Add Customer" onclick="location.href='@Url.Action("New", "Customer")'"/>
+</h2>
+
+<hr>
+
 @if (!Model.Any())
 {
     <p>We do not have any customers yet.</p>
@@ -25,24 +31,24 @@ else
 {
     <table class="table table-bordered table-hover">
         <thead class="thead-light">
-            <tr>
-                <th>ID:</th>
-                <th>Customers:</th>
-                <th>Discount Rate:</th>
-                <th>Memebership Type:</th>
-            </tr>
+        <tr>
+            <th>ID:</th>
+            <th>Customers:</th>
+            <th>Discount Rate:</th>
+            <th>Memebership Type:</th>
+        </tr>
         </thead>
 
         <tbody>
-            @foreach (var customer in Model)
-            {
-                <tr>
-                    <td>@customer.Id</td>
-                    <td>@Html.ActionLink(customer.Name, "CustomerDetails", "Customer", new { id = customer.Id }, null)</td>
-                    <td>@customer.MembershipType.DiscountRate%</td>
-                    <td>@customer.MembershipType.MembershipTypeName</td>
-                </tr>
-            }
+        @foreach (var customer in Model)
+        {
+            <tr>
+                <td>@customer.Id</td>
+                <td>@Html.ActionLink(customer.Name, "Edit", "Customer", new { id = customer.Id }, null)</td>
+                <td>@customer.MembershipType.DiscountRate%</td>
+                <td>@customer.MembershipType.MembershipTypeName</td>
+            </tr>
+        }
         </tbody>
     </table>
 }
