--- a/ASPMVCmarket/Views/Customer/CustomerForm.cshtml
+++ b/ASPMVCmarket/Views/Customer/CustomerForm.cshtml
@@ -19,14 +19,17 @@ else
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.Name)
         @Html.TextBoxFor(m => m.Customer.Name, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Customer.Name)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.BirthTime)
-        @Html.TextBoxFor(m => m.Customer.BirthTime, "{0:d MMM yyyy}" ,new { @class = "form-control" })
+        @Html.TextBoxFor(m => m.Customer.BirthTime, "{0:d MMM yyyy}", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Customer.BirthTime)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.MembershipTypeId)
         @Html.DropDownListFor(m => m.Customer.MembershipTypeId, new SelectList(Model.MembershipTypes, "Id", "MembershipTypeName"), "", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Customer.MembershipTypeId)
     </div>
     <div class="checkbox">
         <label>
@@ -34,5 +37,13 @@ else
         </label>
     </div>
     @Html.HiddenFor(m => m.Customer.Id)
+    @Html.AntiForgeryToken()
     <button type="submit" class="btn btn-primary">Save</button>
+}
+
+@* Client side validation *@
+@section scripts
+{
+    
+    @Scripts.Render("~/bundles/jqueryval")
 }
