--- a/ASPMVCmarket/Views/Customer/CustomerIndex.cshtml
+++ b/ASPMVCmarket/Views/Customer/CustomerIndex.cshtml
@@ -12,7 +12,7 @@
 *@
 
 @{
-    ViewBag.Title = "Customers";
+    ViewBag.Title = "TESLA | Customers";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
