--- a/ASPMVCmarket/Content/Site.css
+++ b/ASPMVCmarket/Content/Site.css
@@ -92,3 +92,27 @@ textarea {
     color: #fff;
     background-color: #1a1a1a;
 }
+/*Bootstrap-lux table changes*/
+
+/*Custom classes*/
+.noBackgroundColor {
+    background-color: white;
+    padding: 40px 0 50px;
+}
+
+.paddingBottom {
+    padding-bottom: 50px;
+}
+
+.centerText {
+    text-align: center;
+}
+
+.fitParent {
+    height: 100%;
+    width: 100%;
+}
+
+.maxNavbarHeight {
+    height: 80px !important;
+}
