--- a/ASPMVCmarket/Views/Home/Contact.cshtml
+++ b/ASPMVCmarket/Views/Home/Contact.cshtml
@@ -1,17 +1,66 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "TESLA | Contact";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
+<div class="card" style="margin-bottom: 20px;">
+    <div class="card-body text-white bg-primary">
+        <h1 class="card-title text-white" style="text-align: center; margin-bottom:10px;">@ViewBag.Title.</h1>
+        <h6 class="card-subtitle mb-2 text-muted" style="text-align: center;">
+            You can find us here:
+        </h6>
+    </div>
+</div>
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+@*<h2 style="text-align: center;">@ViewBag.Title.</h2>
+    <h3 style="text-align: center;">You can find us here:</h3>*@
+
+<div style="display: flex;">
+
+    <img style="border: 3px solid #1a1a1a;
+                    width: 50%;
+                    height:100%;
+                    margin: auto;
+                    margin-left: 15px;
+                    margin-right: 15px;
+                    " src="~/Content/images/map.png" />
+
+    <div style="width: 50%;">
+        <h4>TESLA | Contact</h4>
+        <address class="text-primary">
+            TESLA Poland<br />
+            22 Murckowska<br />
+            40-001 Katowice<br />
+            Poland<br />
+            <abbr title="Phone">P:</abbr>
+            425.555.0100
+        </address>
+
+        <address style="margin-top: 30px;">
+            <h5 style="margin-bottom: 0;">Contact:</h5>
+            Support: <a href="mailto:Support@tesla.com">Support@tesla.com</a><br />
+            Marketing: <a href="mailto:Marketing@tesla.com">Marketing@tesla.com</a><br />
+            Worldwide inquiries: <a href="mailto:Press@tesla.com">Press@tesla.com</a>
+        </address>
+
+        <address style="margin-top: 30px;">
+            <h5 style="margin-bottom: 0;">Customer Support & Roadside Assistance:</h5>
+            Toll free: (877) 79-TESLA<br />
+            (877) 798-3752 Local<br />
+            Service Center: (844) 248-3752<br />
+        </address>
+
+        <address style="margin-top: 30px;">
+            <h5 style="margin-bottom: 0;">Sales:</h5>
+            Toll free: (888) 51-TESLA<br />
+            (888) 518-3752<br />
+            Local: (650) 681-5100 <br />
+            Fax: (650) 681-5101 <br />
+            <a href="mailto:NASales@tesla.com">NASales@tesla.com</a><br />
+            <a href="mailto:EnergyOrdersNA@tesla.com">EnergyOrdersNA@tesla.com</a>
+        </address>
+    </div>
+</div>
+
+<h3 class="card-header" style="border: 0; margin-top:20px;">
+    <a class="badge badge-primary fitParent" style="padding: 0.7em 0.4em;" target="_blank" href="https://www.google.com/maps?daddr=50.254594,19.046594">Find us here! &raquo;</a>
+</h3>
