--- a/ASPMVCmarket/Views/Home/Index.cshtml
+++ b/ASPMVCmarket/Views/Home/Index.cshtml
@@ -1,31 +1,35 @@
 ﻿@{
-    ViewBag.Title = "HOME";
+    ViewBag.Title = "TESLA | Home";
+    ViewBag.HideNavBar = true;
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div class="jumbotron noBackgroundColor centerText paddingBottom" style="padding-top: 0;">
+    <img class="fitParent paddingBottom" src="~/Content/images/homepage2.png" />
+    <h1>
+        <p>Quickest Acceleration. Longest Range.</p>
+        <p>The Safest Cars Ever.</p>
+    </h1>
 </div>
 
-<div class="row">
+
+<hr>
+<div class="row" style="margin-bottom: 40px;">
     <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+        <a href="@Url.Action("News", "Home")"><h2 class="centerText">NEWS</h2></a>
+        <p class="centerText">
+            Find out the latest news in the Tesla's World.
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <a href="@Url.Action("CarIndex", "Car")"><h2 class="centerText">VEHICLES</h2></a>
+        <p class="centerText">
+            Browse through our greatests products and find the perfect car for You and your family!
+        </p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <a href="@Url.Action("Contact", "Home")"><h2 class="centerText" href="@Url.Action("Contact", "Home")">CONTACT</h2></a>
+        <p class="centerText">
+            Contact with us and check out where You can find us.
+        </p>
     </div>
 </div>
