--- a/ASPMVCmarket/Views/Shared/_Layout.cshtml
+++ b/ASPMVCmarket/Views/Shared/_Layout.cshtml
@@ -3,21 +3,29 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - TESLA</title>
+    <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
 <body>
-    @Html.Partial("_NavBar")
+    @if (ViewBag.HideNavBar == null)
+    {
+        @Html.Partial("_NavBar")
+    }
+   
     <div class="container body-content">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - TESLA Store</p>
-        </footer>
+
+        @if (ViewBag.HideNavBar == null)
+         {
+            <hr />
+            <footer>
+                <p>&copy; @DateTime.Now.Year - TESLA Store</p>
+            </footer>
+         }
     </div>
-    @Scripts.Render("~/bundles/lib")
-    @RenderSection("scripts", required: false)
-</body>
+        @Scripts.Render("~/bundles/lib")
+        @RenderSection("scripts", required: false)
+    </body>
 </html>
