--- a/ASPMVCmarket/Views/Customer/CustomerIndex.cshtml
+++ b/ASPMVCmarket/Views/Customer/CustomerIndex.cshtml
@@ -27,10 +27,10 @@
     <thead class="thead-light">
         <tr>
             <th>ID:</th>
-            <th>Customers:</th>
-            <th>Discount Rate:</th>
+            <th>Email:</th>
+            @*<th>Discount Rate:</th>
             <th>Memebership Type:</th>
-            <th>Delete</th>
+            <th>Delete</th>*@
         </tr>
     </thead>
 
@@ -56,15 +56,7 @@
                     },
 
                     {
-                        data: "name"
-                    },
-
-                    {
-                        data: "membershipType.discountRate"
-                    },
-
-                    {
-                        data: "membershipType.membershipTypeName"
+                        data: "Email"
                     },
 
                     {
