--- a/ASPMVCmarket/Content/bootstrap-lux.css
+++ b/ASPMVCmarket/Content/bootstrap-lux.css
@@ -1881,7 +1881,7 @@ pre code {
 }
 
 .table-bordered {
-    border: 4px solid rgba(0, 0, 0, 0.05);
+    border: 4px solid rgba(0, 0, 0, 0.05) !important;
 }
 
 .table-bordered th,
