--- a/ASPMVCmarket/Views/Shared/_NavBar.cshtml
+++ b/ASPMVCmarket/Views/Shared/_NavBar.cshtml
@@ -37,7 +37,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="@Url.Action("CustomerIndex", "Customer")">customers</a>
+                        <a class="nav-link" href="@Url.Action("UserIndex", "User")">users</a>
                     </li>
                 </ul>
 
